test/error/UnreachableNative.fu
public static class Test
{
	public static bool Run()
	{
		return true;
		native { ; } //ERROR: Unreachable statement
	}
}
